--- a/vue-ts-default/src/assets/styles/index.scss
+++ b/vue-ts-default/src/assets/styles/index.scss
@@ -1,3 +1,12 @@
 /* 全局进度条样式 */
 @import url('nprogress/nprogress.css');
+
+/* 全局混入 */
+@import url('./mixin.scss');
+
+/* 小爱UI */
 @import url('./loveshow-ui.css');
+
+#nprogress .bar {
+  background: red !important;
+}
