--- a/vue-ts-default/src/assets/styles/loveshow-ui.css
+++ b/vue-ts-default/src/assets/styles/loveshow-ui.css
@@ -9,12 +9,15 @@
 
 html,
 body {
+  overflow: hidden;
   margin: 0;
   width: 100vw;
   min-height: 100vh;
 }
 
 body {
+  padding-bottom: constant(safe-area-inset-bottom);
+  padding-bottom: env(safe-area-inset-bottom);
   -webkit-user-select: none; /* Chrome/Safari/Opera */
   -khtml-user-select: none; /* Konqueror */
   -moz-user-select: none; /* Firefox */
@@ -69,7 +72,7 @@ textarea {
 
 /* @font-face {
   font-family: 'PingFangSC-Regular';
-  src: url('../fonts//PingFang\ SC.ttf');
+  src: url('/src/assets/fonts/PingFang\ SC.ttf');
 } */
 
 ul,
